<resources>
    <string name="app_name">玩Android</string>

    <string name="title_page_home">首页</string>
    <string name="title_page_knowledge">知识体系</string>
    <string name="title_page_weixin">公众号</string>
    <string name="title_page_navigation">导航</string>
    <string name="title_page_project">项目</string>

    <string name="behavior_bottomnavigationview_hide">com.huanglei.wanandroid.widget.behavior.BottomNavigationViewBehavior</string>
    <string name="behavior_floatingactionbutton_hide">com.huanglei.wanandroid.widget.behavior.FloatingActionButtonBehavior</string>

    <string name="about_us_content">
        <![CDATA[
        <h2>网站内容</h2>
        <p>\t\t本网站每天新增20~30篇优质文章，并加入到现有分类中，力求整理出一份优质而又详尽的知识体系，闲暇时间不妨上来学习下知识；除此以外，并为大家提供平时开发过程中常用的工具以及常用的网址导航。</p>
        <p>\t\t当然这只是我们目前的功能，未来我们将提供更多更加便捷的功能…</p>
        <p>\t\t如果您有任何好的建议：</p>
            <br/>\t\t\t\t关于网站排版
            <br/>\t\t\t\t关于新增常用网址以及工具
            <br/>\t\t\t\t未来你希望增加的功能等
        <p>\t\t可以在 <a href="https://github.com/hongyangAndroid/wanandroid" target="_blank">玩Android</a> 项目中以issue的形式提出，我将及时跟进。</p>
        <p>\t\t如果您希望长期关注本站，可以加入我们的QQ群：<b>591683946</b></p>
        <h2>源码位置</h2>
        <p>\t\t本软件开源，如果你发现任何错误，不要犹豫，马上点击<a href="https://github.com/huangleiii/WanAndroid" target="_blank">GitHub</a>，在上面发起<b>issue</b>或者提交<b>pull request</b>。</p>
        ]]>
    </string>
    <string name="releases">https://github.com/huangleiii/WanAndroid/releases</string>
</resources>
